base/infrastructure/tailscale/egress/pc/ingress-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: pc-rustdesk
  namespace: infrastructure
spec:
  entryPoints:
    - rustdesk
  routes:
    - match: HostSNI(`*`)
      services:
        - name: pc-egress
          port: 21118
