base/infrastructure/tailscale/egress/pc/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pc-web
  namespace: infrastructure
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pc.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: pc-egress
          port: 21118
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pc-websecure
  namespace: infrastructure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pc.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: pc-egress
          port: 21118
  tls:
    secretName: pc-tls
